--- a/about.html
+++ b/about.html
@@ -3,7 +3,10 @@
 <header>
 <style>
      body {
-     background-image: url( "/images/JC .jpg" );
+     background-image: url( '/images/JC .jpg' );
+     background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;     
      }
      </style>
 <h1>
