--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
      background-image: url( '/images/JC .jpg' );
      background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center;     
+    background-position: center;  
+     background-size: 80px 60px;
      }
      </style>
 <h1>
