--- a/about.html
+++ b/about.html
@@ -3,11 +3,7 @@
 <header>
 <style>
      body {
-     background-image: url( '/images/JC .jpg' );
-     background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;  
-     background-size: 80px 60px;
+     background-color: #ffbb00;
      }
      </style>
 <h1>
