--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
      body {
      background-color: #ffbb00;
      }
+     
+     p {
+          background-color: white;
+          font-size: 18px;
      </style>
 <h1>
 About Me 
