--- a/about.html
+++ b/about.html
@@ -3,12 +3,13 @@
 <header>
 <style>
      body {
-     background-color: #ffbb00;
+      background-color: #00ff00;
      }
      
      p {
           background-color: white;
           font-size: 18px;
+     }
      </style>
 <h1>
 About Me 
