--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body {
   <div class="overlay-content">
     <a href="about.html"
     	target= "_blank" > About Me</a>
-    <a href="experience.html" 
+    <a href="/images/Winter_16_Resume.pdf" 
     	target= "_blank"> Experience</a>
     <a href="hobbies.html"
     	target= "_blank"> Hobbies</a>
