--- a/about.html
+++ b/about.html
@@ -3,12 +3,11 @@
 <header>
 <style>
      body {
-      background-color: #00ff00;
+      background-color: #a4a595;
      }
      
      p {
-          background-color: white;
-          font-size: 18px;
+          font-size:18px;
      }
      </style>
 <h1>
@@ -25,6 +24,7 @@ Lorum Ipsum
 
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dictum leo lectus, in cursus magna cursus nec. Maecenas ultricies, nisl ac bibendum luctus, ligula nisl fermentum turpis, quis sollicitudin sapien est vitae eros. Morbi a rutrum purus, quis mollis purus. Phasellus at metus vestibulum ex elementum pellentesque id eu ligula. Aliquam ultrices consequat accumsan. Duis tincidunt tellus eu tellus iaculis, at elementum turpis tristique. Aenean fermentum turpis at lobortis porta. Nulla rutrum massa vitae magna commodo, sit amet laoreet erat gravida. Aliquam dictum eleifend nisi eget scelerisque. In accumsan interdum diam porta accumsan. Sed non interdum nibh. Aenean porttitor tellus vel risus sodales dignissim. Pellentesque auctor pellentesque nunc, ut sagittis mauris luctus in. Nunc sodales imperdiet augue a vehicula.</p>
+<p> Proin a tellus purus. Sed et varius metus. Nullam nibh tortor, volutpat vel lorem vulputate, vulputate suscipit nibh. Ut mattis congue quam a luctus. Pellentesque et purus vel mi ullamcorper semper. Curabitur volutpat, tortor non feugiat sagittis, lorem urna accumsan nisl, nec facilisis mi nisl id mi. Phasellus pulvinar, tellus et viverra vulputate, metus nunc ultrices turpis, sed cursus risus eros non massa. Nulla justo nibh, fermentum nec justo tincidunt, porttitor aliquet orci. Aliquam tincidunt gravida arcu vel elementum. Vestibulum nec velit diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin faucibus augue nec nulla ultrices, sed fermentum quam luctus. Aliquam tellus ipsum, egestas quis sodales id, sodales at risus. </p>     
 
 </body>
 </html>
