--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@ header {
 	Position: relative;
     text-align: center;   
 }
-background {
+body { 
      background: linear-gradient(red, yellow); /* Standard syntax */
-
+	}
 </style>
 <h1>
 About Me 
