--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@ header {
     text-align: center;   
 }
 body { 
-     background: linear-gradient(red, yellow); /* Standard syntax */
+     background: linear-gradient(#a5a5a5, white); /* Standard syntax */
+     background-repeat: no-repeat;
 	}
 </style>
 <h1>
