--- a/hobbies.html
+++ b/hobbies.html
@@ -4,6 +4,10 @@
 <style>
      body {
       background-color: #a4a595;
+              position: relative;
+    left: 30px;
+    border: 3px solid #73AD21;
+          
      }
      
      h1 {
