--- a/hobbies.html
+++ b/hobbies.html
@@ -3,10 +3,11 @@
 <header>
 <style>
      body {
-      background-color: #a4a595;
-              position: relative;
-    left: 30px;
-    border: 3px solid #73AD21;
+     background-color: #a4a595;
+     position: relative;
+     left: 15px;
+     right: 15px;
+    border: 5px solid #ffbb00;
           
      }
      
