--- a/hobbies.html
+++ b/hobbies.html
@@ -27,7 +27,8 @@
      }
      
      img {
-          vertical-align: text-top;
+          margin-left: auto;
+          margin-right: auto;
      }
      </style>
 <h1>
