--- a/hobbies.html
+++ b/hobbies.html
@@ -27,7 +27,7 @@
      }
      
      img {
-          display: block;
+          display: inline;
           margin-left: auto;
           margin-right: auto;
      }
