--- a/hobbies.html
+++ b/hobbies.html
@@ -30,6 +30,7 @@
           display: block;
           margin-left: auto;
           margin-right: auto;
+          padding: 20px;
      }
      </style>
 <h1>
