--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,10 @@ input[type=send]:hover {
 }
 
 h3 {
-
+font-size: 36px;
 text-align: center;
-color: #ffbb00
+color: #ffbb00;
+border: 5px solid #ffbb00;
 }
 </style>
 </head>
