--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@ h3 {
 font-size: 36px;
 text-align: center;
 color: #ffbb00;
-border: 5px solid #ffbb00;
+border: 5px solid black;
 }
 </style>
 </head>
