--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
     
 }
 
-.overlay {
+.pull {
     height: 0%;
     width: 100%;
     position: fixed;
@@ -26,7 +26,7 @@ body {
     transition: 1.0s;
 }
 
-.overlay-content {
+.pull-content {
     position: relative;
     top: 10%;
     width: 100%;
@@ -34,7 +34,7 @@ body {
     margin-top: 30px;
 }
 
-.overlay a {
+.pull a {
     padding: 8px;
     font-size: 36px;
     color: white;
@@ -42,11 +42,11 @@ body {
     transition: 0.3s;
 }
 
-.overlay a:hover {
+.pull a:hover {
     color: #ffbb00;
 }
 
-.overlay .closebtn {
+.pull .closebtn {
     position: absolute;
     top: 20px;
     right: 45px;
@@ -60,7 +60,7 @@ body {
 
 <body>
 
-<div id="myNav" class="overlay">
+<div id="menu" class="pull">
 
   <a href="#leave" class="closebtn"
   onclick="closeNav()">&times;</a>
@@ -86,11 +86,11 @@ body {
 
 
 function openNav() {
-    document.getElementById("myNav").style.height = "100%";
+    document.getElementById("menu").style.height = "100%";
 }
 
 function closeNav() {
-    document.getElementById("myNav").style.height = "0%";
+    document.getElementById("menu").style.height = "0%";
 }
 </script>
      
