--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ body {
 <div id="menu" class="pull">
 
   <a href="#leave" class="closebtn"
-  onclick="closeNav()">&times;</a>
+  onclick="closeMenu()">&times;</a>
   
-  <div class="overlay-content">
+  <div class="pull-content">
     <a href="about.html"
     	target= "_blank" > About Me</a>
     <a href="/images/Winter_16_Resume.pdf" 
@@ -80,7 +80,7 @@ body {
 </div>
 
 
-<span style="font-size:30px;cursor:pointer" onclick="openNav()"> Click Me!</span>
+<span style="font-size:30px;cursor:pointer" onclick="openMenu()"> Click Me!</span>
 
 <script>
 
